--- a/text/citace.bib
+++ b/text/citace.bib
@@ -430,4 +430,12 @@ keywords = "Plastic nuclear track detector "
     urldate={2017-06-19},
 }
 
+@online{researchModule,
+    author={Wikipedia, The Free Encyclopedia},
+    title={Russian Research Module},
+    url={https://en.wikipedia.org/wiki/Russian_Research_Module},
+    date={2016-12-24},
+    organization={Wikipedia, The Free Encyclopedia},
+    urldate={2017-06-20},
+}
 %pozn.: clanky rozradit do kapitol (aby by to bylo prehlednejsi)
