--- a/text/main.tex
+++ b/text/main.tex
@@ -2,8 +2,8 @@
 \documentclass[a4paper,12pt,oneside]{report}
 \input{parts/preamble}
 %\includeonly{parts/titlepage, parts/uvod}
-\includeonly{parts/experimentDosis, parts/praktickaCast}
-%\includeonly{parts/experimentDosis, parts/detektory, parts/praktickaCast}
+%\includeonly{parts/experimentDosis}%, parts/praktickaCast}
+%\includeonly{parts/experimentDosis, parts/detektory}%, parts/praktickaCast}
 %\includeonly{parts/praktickaCast}
 %\includeonly{parts/detektory, parts/experimentDosis}
 %\includeonly{parts/detektory,parts/praktickaCast}
@@ -33,6 +33,6 @@
 \include{parts/zaver}
 
 %\include{parts/appendix}
-\nocite{*}
+%\nocite{*}
 \printbibliography[title=Seznam literatury]
 \end{document}
